--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Technologies from "@components/Technologies.astro";
 import Layout from "@layouts/Layout.astro";
-import technologies from "@content/technologies.json";
+import { technologies } from "@content/technologies";
 ---
 
 <Layout title="About - Lance Ross" description="I'm Lance Ross, a web dev from Philippines. You can find more about me on this page.">
