--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import BlogCard from "@components/BlogCard.astro";
-import Blogs from "@content/blogs.json";
+import { blogs } from "@content/blogs";
 ---
 
 <Layout title="Blog - Lance Ross" description="This is where you can find my blogs from Dev Community (dev.to)">
@@ -13,7 +13,7 @@ import Blogs from "@content/blogs.json";
   </section>
   <section>
     {
-      Blogs.map((blog) => (
+      blogs.map((blog) => (
         <BlogCard
           title={blog.title}
           description={blog.description}
