--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -7,7 +7,7 @@ export interface Props {
 }
 let { title, description, pubDate, url } = Astro.props;
 const fullDate = new Date(pubDate).toLocaleDateString("en", {
-  dateStyle: "full",
+  dateStyle: "long",
 });
 url = url + "/";
 ---
