--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const defaultMeta = {
   title: "Lance Ross",
   description: "A student web dev in Philippines.",
   image: "banner.png",
-  imageAlt: "Marnie from Pokemon Journeys",
+  imageAlt: "Logo of Vercel with Marnie from Pokemon",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
