fixed blog layout and links

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -93,6 +93,7 @@ const canonicalURL = new URL(Astro.url).href;
       <section class="dark:text-zinc-200 prose-a:dark:text-blue-400 prose-a:text-blue-600 prose-xl !text-[1.18rem] prose-img:rounded-xl">
         <slot />
       </section>
+      <br><a href="/blog" class="dark:text-blue-400 text-blue-600">Go back to posts</a>
     </main>
   </body>
 </html>
