change image & fixed typo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout>
   <section>
     <div class="inline-block space-evenly py-8 md:flex">
-      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/images/hero-image.webp" alt="A picture of Marnie from Pokemon Journeys" />
+      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/assets/profile-pic.webp" alt="A Picture of Lance Ross with a Face Mask" />
       <section class="ml-1">
         <h1 class="text-4xl font-semibold my-7">Lance Ross</h1>
         <p class="phrase max-w-10 my-5">Why you don't have JavaScript enabled?</p>
