--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,8 @@ export interface Props {
 const defaultMeta = {
   title: "Lance Ross",
   description: "A student web dev in Philippines.",
-  image: "banner.png",
-  imageAlt: "Logo of Vercel with Marnie from Pokemon",
+  image: "banner.jpeg",
+  imageAlt: "A Picture of Lance Ross with a Face Mask",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
