--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -10,8 +10,8 @@ const { text, logo } = Astro.props as Props;
 ---
 
 <div class="flex items-center p-4">
-  <span class="flex justify-center items-center w-9 h-9 mr-3">
-    <Icon name={logo} />
+  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-[#1a1c23] bg-[#efefef] border-t border-zinc-200 dark:border-slate-800">
+    <Icon name={logo} class="w-6" />
   </span>
   <p>{text}</p>
 </div>
