--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,13 +12,13 @@ export interface Props {
 const defaultMeta = {
   title: "Lance Ross",
   description: "A student web dev in Philippines.",
-  image: "banner.jpeg",
+  image: "/static/banner.jpeg",
   imageAlt: "A Picture of Lance Ross with a Face Mask",
 };
 
 const { title = defaultMeta.title, description = defaultMeta.description, heroImage = defaultMeta.image, imageAlt = defaultMeta.imageAlt } = Astro.props as Props;
 
-const ImageURL = new URL(`/assets/${heroImage}`, Astro.site);
+const ImageURL = new URL(heroImage, Astro.site);
 const canonicalURL = new URL(Astro.url).href;
 ---
 
@@ -27,7 +27,7 @@ const canonicalURL = new URL(Astro.url).href;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <title>{title}</title>
     <link rel="canonical" href={canonicalURL} />
     <meta name="title" content={title} />
