--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import Layout from "@layouts/Layout.astro";
 <Layout>
   <section>
     <div class="inline-block space-evenly py-8 md:flex">
-      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/assets/profile-pic.webp" alt="A Picture of Lance Ross with a Face Mask" />
+      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/static/profile-pic.webp" alt="A Picture of Lance Ross with a Face Mask" />
       <section class="ml-1">
         <h1 class="text-4xl font-semibold my-7">Lance Ross</h1>
-        <p class="phrase max-w-10 my-5">Why you don't have JavaScript enabled?</p>
+        <p class="phrase max-w-10 my-5"></p>
         <p class="max-w-10 dark:text-zinc-300">
           Welcome to my home on the internet. I'm an aspiring web developer in the Philippines building different projects for fun with web technologies I'm currently learning.
         </p>
@@ -28,9 +28,8 @@ import Layout from "@layouts/Layout.astro";
     <div class="py-14 grid place-items-center text-center">
       <h2 class="text-3xl mb-8">Get In Touch 💬</h2>
       <p class="max-w-lg dark:text-zinc-300">
-        If you want collab on a small project or just want say hello to me, Feel free to <span class="email text-blue-600 dark:text-blue-400 cursor-pointer transition"
-          >enable your JavaScript on your browser</span
-        > and I will look forward to your message!
+        If you want collab on a small project or just want say hello to me, Feel free to <a href="mailto:lancerossdev@duck.com" target="_blank" class="text-blue-600 dark:text-blue-400 cursor-pointer transition"
+          >send an email</a> and I will look forward to your message!
       </p>
       <div class="mt-8 flex space-evenly items-center">
         <a class="mx-4" href="https://twitter.com/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="Twitter Logo"
@@ -70,10 +69,6 @@ import Layout from "@layouts/Layout.astro";
       </div>
     </div>
   </section>
-  <script defer>
-    document.querySelector(".email").innerHTML =
-      "\x3C\x61\x20\x68\x72\x65\x66\x3D\x27\x6D\x61\x69\x6C\x74\x6F\x3A\x6C\x61\x6E\x63\x65\x72\x6F\x73\x73\x64\x65\x76\x40\x73\x6B\x69\x66\x66\x2E\x63\x6F\x6D\x27\x20\x74\x61\x72\x67\x65\x74\x3D\x27\x5F\x62\x6C\x61\x6E\x6B\x27\x3E\x73\x65\x6E\x64\x20\x61\x6E\x20\x65\x6D\x61\x69\x6C\x3C\x2F\x61\x3E";
-  </script>
   <script defer>
     const phrases = ["Student Web Developer 👨‍💻", "Tailwind CSS Lover 💨", "Big fan of Astro SSG 🚀", "Filipino Web Developer 😎"];
 
