--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout>
   <section>
     <div class="inline-block space-evenly py-8 md:flex">
-      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/static/profile-pic.webp" alt="A Picture of Lance Ross with a Face Mask" />
+      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src="/assets/profile.webp" alt="A Picture of Lance Ross with a Face Mask" />
       <section class="ml-1">
         <h1 class="text-4xl font-semibold my-7">Lance Ross</h1>
         <p class="phrase max-w-10 my-5"></p>
@@ -28,8 +28,11 @@ import Layout from "@layouts/Layout.astro";
     <div class="py-14 grid place-items-center text-center">
       <h2 class="text-3xl mb-8">Get In Touch 💬</h2>
       <p class="max-w-lg dark:text-zinc-300">
-        If you want collab on a small project or just want say hello to me, Feel free to <a href="mailto:lancerossdev@duck.com" target="_blank" class="text-blue-600 dark:text-blue-400 cursor-pointer transition"
-          >send an email</a> and I will look forward to your message!
+        If you want collab on a small project or just want say hello to me, Feel free to <a
+          href="mailto:lancerossdev@duck.com"
+          target="_blank"
+          class="text-blue-600 dark:text-blue-400 cursor-pointer transition">send an email</a
+        > and I will look forward to your message!
       </p>
       <div class="mt-8 flex space-evenly items-center">
         <a class="mx-4" href="https://twitter.com/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="Twitter Logo"
@@ -69,11 +72,11 @@ import Layout from "@layouts/Layout.astro";
       </div>
     </div>
   </section>
-  <script defer>
-    const phrases = ["Student Web Developer 👨‍💻", "Tailwind CSS Lover 💨", "Big fan of Astro SSG 🚀", "Filipino Web Developer 😎"];
+    <script defer>
+      const phrases = ["Student Web Developer 👨‍💻", "Tailwind CSS Lover 💨", "Big fan of Astro SSG 🚀", "Filipino Web Developer 😎"];
 
-    window.addEventListener(`load`, () => {
-      document.querySelector(".phrase").innerHTML = phrases[Math.floor(Math.random() * phrases.length)];
-    });
-  </script>
+      window.addEventListener(`load`, () => {
+        document.querySelector(".phrase").innerHTML = phrases[Math.floor(Math.random() * phrases.length)];
+      });
+    </script>
 </Layout>
