removed og generator
I also updated stuffs

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -2,13 +2,11 @@
 import Header from "@components/Header.astro";
 import "@fontsource/lexend-deca";
 const { frontmatter } = Astro.props;
-const { content, url } = Astro.props;
-const ogImage = url.replace("blog", "images")+ ".png";
 const canonicalURL = new URL(Astro.url).href;
 ---
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" style="scroll-behavior: smooth;">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -21,7 +19,7 @@ const canonicalURL = new URL(Astro.url).href;
     <meta property="og:url" content={canonicalURL} />
     <meta property="og:title" content={frontmatter.title} />
     <meta property="og:description" content={frontmatter.description} />
-    <meta property="og:image" content={ogImage} />
+    <meta property="og:image" content={frontmatter.ogimage} />
     <meta property="og:site_name" content="Lance Ross" />
     <meta property="og:locale" content="en_US" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,7 +28,7 @@ const canonicalURL = new URL(Astro.url).href;
     <meta name="twitter:creator" content="@lancerossdev" />
     <meta property="twitter:title" content={frontmatter.title} />
     <meta property="twitter:description" content={frontmatter.description} />
-    <meta property="twitter:image" content={ogImage} />
+    <meta property="twitter:image" content={frontmatter.ogimage} />
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
     <meta name="author" content={frontmatter.author} />
@@ -95,7 +93,11 @@ const canonicalURL = new URL(Astro.url).href;
           <slot />
         </article>
       </section>
-      <br><a href="/blog" class="dark:text-blue-400 text-blue-600">Go back to posts</a>
+      <br>
+      <div class="flex flex-row justify-between items-center">
+        <a href="/blog" class="dark:text-blue-400 text-blue-600">Go back to posts</a>
+        <a href="#" class="dark:text-blue-400 text-blue-600">Go back to top</a>
+      </div>
     </main>
   </body>
 </html>
