--- a/src/layouts/NotFound.astro
+++ b/src/layouts/NotFound.astro
@@ -49,7 +49,7 @@ const canonicalURL = new URL(Astro.url).href;
     </script>
   </head>
   <body class="dark:bg-[#101218] dark:text-white m-0 min-h-screen flex flex-col text-xl font-lexend-deca selection:bg-[#3d94ff42] overflow-y-hidden">
-    <main class="m-auto p-8 max-w-4xl md:p-10 text-center">
+    <main class="m-auto !top-[20%] p-8 max-w-4xl md:p-10 text-center">
       <slot />
     </main>
   </body>
