--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,77 +1,43 @@
-<header class="pt-6 pb-4 md:pb-12 sticky !backdrop-blur-sm !bg-opacity-90 top-0 bg-white dark:bg-[#101218] transition-colors">
+---
+import { Icon } from "astro-icon";
+---
+
+<header class="pt-6 pb-4 md:pb-12 sticky !backdrop-blur-sm !bg-opacity-80 top-0 bg-white dark:bg-[#101218] transition-colors">
   <nav>
     <div class="navbar w-0 h-screen fixed overflow-y-hidden !z-30 dark:bg-[#101218] bg-white md:hidden duration-200">
-      <span class="close inline-block md:hidden ml-3 !pt-0 transition">
-        <svg
-          clip-rule="evenodd"
-          fill-rule="evenodd"
-          stroke-linejoin="round"
-          stroke-miterlimit="2"
-          viewBox="0 0 24 24"
-          width="36"
-          height="36"
-          xmlns="http://www.w3.org/2000/svg"
-          class="dark:fill-white hover:fill-blue-600 hover:dark:fill-blue-400 transition"
-          ><path
-            d="m13.789 7.155c.141-.108.3-.157.456-.157.389 0 .755.306.755.749v8.501c0 .445-.367.75-.755.75-.157 0-.316-.05-.457-.159-1.554-1.203-4.199-3.252-5.498-4.258-.184-.142-.29-.36-.29-.592 0-.23.107-.449.291-.591 1.299-1.002 3.945-3.044 5.498-4.243z"
-          ></path>
-        </svg>
-      </span>
-      <div class="relative w-full grid place-items-center top-1/4 text-black bg-white dark:text-white dark:bg-[#101218]">
+      <button class="close inline-block md:hidden !pt-0 transition ml-5" aria-label="close navigation button">
+        <Icon
+          name="akar-icons:arrow-left"
+          class="w-[26px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 close"
+        />
+      </button>
+      <div class="relative w-full grid place-items-center top-[20%] text-black bg-white dark:text-white dark:bg-[#101218]">
         <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/">Home</a>
         <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/about">About</a>
         <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/projects">Projects</a>
         <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/blog">Blog</a>
       </div>
     </div>
-    <span class="open inline-block ml-5 md:hidden transition"
-      ><svg
-        clip-rule="evenodd"
-        fill-rule="evenodd"
-        stroke-linejoin="round"
-        stroke-miterlimit="2"
-        viewBox="0 0 24 24"
-        width="28"
-        height="28"
-        class="dark:fill-white hover:fill-blue-600 hover:dark:fill-blue-400 transition"
-        xmlns="http://www.w3.org/2000/svg"
-        ><path
-          d="m16.5 11.995c0-1.242 1.008-2.25 2.25-2.25s2.25 1.008 2.25 2.25-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25zm-6.75 0c0-1.242 1.008-2.25 2.25-2.25s2.25 1.008 2.25 2.25-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25zm-6.75 0c0-1.242 1.008-2.25 2.25-2.25s2.25 1.008 2.25 2.25-1.008 2.25-2.25 2.25-2.25-1.008-2.25-2.25z"
-        ></path>
-      </svg>
-    </span>
-    <span class="absolute pr-4 font-bold text-[22px] left-12 ml-2 pt-0 md:left-14 md:ml-1 md:pt-1">
-      <a href="/" class="text-transparent bg-clip-text bg-gradient-to-r from-[#4873f5] to-[#2bcc69] animate-rainbow">lanceross</a>
-    </span>
-    <span class="absolute pl-5 text-xl left-44 pt-1 hidden md:block text-black dark:text-white">
+    <button class="open inline-block ml-5 md:hidden transition" aria-label="open navigation button"
+      ><Icon name="akar-icons:more-horizontal-fill" class="w-[28px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+    </button>
+    <a
+      href="/"
+      class="text-transparent bg-clip-text bg-gradient-to-r from-[#4873f5] to-[#2bcc69] animate-rainbow absolute pr-4 font-bold text-[22px] left-12 ml-2 pt-0 pr-0 md:left-14 md:ml-1 md:pt-1"
+      >lanceross</a
+    >
+    <div class="absolute pl-5 text-xl left-44 pt-1 hidden md:block text-black dark:text-white">
       <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/about">About</a>
       <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/projects">Projects</a>
       <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/blog">Blog</a>
-    </span>
+    </div>
     <span>
-      <a class="absolute pointer right-16 md:right-20" href="https://github.com/lancerossdev/lanceross-xyz" target="_blank" rel="noopener nofollow" aria-label="github button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="dark:fill-white hover:fill-slate-500 dark:hover:fill-slate-400 transition hover:scale-110"
-          ><path
-            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
-          ></path>
-        </svg>
+      <a class="absolute pointer right-16 md:right-20" href="https://github.com/lancerossdev/lanceross.xyz" target="_blank" rel="noopener nofollow" aria-label="github button">
+        <Icon name="akar-icons:github-fill" class="w-[26px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
       </a>
       <button class="theme-toggle absolute pointer right-[28px] md:right-10" aria-label="theme toggle">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          class="dark-btn dark:fill-white hover:fill-slate-500 dark:hover:fill-slate-400 transition hover:scale-110 dark:hidden"
-          ><path
-            d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
-          ></path>
-        </svg>
-        <svg width="26" height="26" viewBox="0 0 24 24" class="light-btn dark:fill-white hover:fill-slate-500 dark:hover:fill-slate-400 transition hover:scale-110 hidden dark:block"
-          ><path
-            d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
-          ></path>
-        </svg>
+        <Icon name="akar-icons:moon" class="w-[26px] dark-btn hover:text-slate-500 dark:hover:text-slate-400 transition hover:scale-110 dark:hidden" />
+        <Icon name="akar-icons:sun" class="w-[26px] light-btn dark:text-white hover:text-slate-500 dark:hover:text-slate-400 transition hover:scale-110 hidden dark:block" />
       </button>
     </span>
   </nav>
