--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -12,26 +12,25 @@ export interface Props {
 const { title, description, technologies, githubUrl, projectUrl } = Astro.props;
 ---
 
-<div
-  class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-[#14151a] hover:dark:bg-[#1a1c23] text-black dark:text-zinc-400 bg-[#efefef] hover:bg-[#e5e5e5] rounded-xl shadow-xl cursor-pointer transition-colors"
->
+<div class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-[#13151b] text-black dark:text-zinc-400 bg-[#efefef] rounded-xl shadow-xl transition-colors">
   <header class="flex justify-between items-center">
     <h2 class="text-xl font-medium dark:text-white">
-      {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="link of the project"
-        ><Icon name="fa:external-link-square" class="w-4 inline-block ml-2 dark:text-white text-zinc-800 hover:text-blue-600 dark:hover:text-sky-400 transition-colors" />
+      {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="link of the project" class="ml-2"
+        ><Icon
+          name="akar-icons:arrow-up-right"
+          class="w-6 inline-block dark:text-white dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-[115%] transition-all"
+        />
       </a>
     </h2>
     <a href={githubUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="github repo of the website"
-      ><Icon name="akar-icons:github-fill" class="w-6 dark:text-white text-zinc-800 hover:text-blue-600 dark:hover:text-sky-400 hover:scale-110 transition-all" />
+      ><Icon name="akar-icons:github-fill" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
     </a>
   </header>
   {
     technologies && (
       <ul class="flex gap-2 flex-wrap">
         {technologies.map((tech) => (
-          <li class="dark:bg-zinc-800 bg-zinc-200 dark:text-white py-0.5 px-2 text-sm rounded-md transition-colors">
-            {tech}
-          </li>
+          <li class="dark:bg-[#1b1e27] bg-[#e6e6e6] dark:text-white py-0.5 px-2 text-sm rounded-md transition-colors">{tech}</li>
         ))}
       </ul>
     )
