--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -10,7 +10,7 @@ const { text, logo } = Astro.props as Props;
 ---
 
 <div class="flex items-center p-4">
-  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-[#1a1c23] bg-[#d5e2e5] border-t border-zinc-200 dark:border-slate-800 transition">
+  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-[#1a1c23] bg-[#e2e2e4] border-t border-stone-400 dark:border-zinc-700 transition">
     <Icon name={logo} class="w-6" />
   </span>
   <p>{text}</p>
