--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,19 +8,13 @@ import { projects } from "@content/projects";
   <section>
     <h1 class="text-4xl mb-6">My Projects 📚</h1>
     <p class="dark:text-zinc-300 mb-5">
-      These are all projects that I own and contribute to during my free time. Each project have a link on their repositories so you can visit the project on your browser. You can check all
-      my projects in <a href="https://github.com/lancerossdev?tab=repositories" target="_blank" rel="noopener nofollow" class="text-blue-600 dark:text-blue-400">GitHub</a>.
+      These are all projects that I own and contribute to during my free time. Each project have a link on their repositories so you can visit the project on your browser. You can check all my
+      projects in <a href="https://github.com/lancerossdev?tab=repositories" target="_blank" rel="noopener nofollow" class="text-blue-600 dark:text-blue-400">GitHub</a>.
     </p>
     <section class="grid mb-5">
       {
         projects.map((project) => (
-          <ProjectCard
-            title={project.title}
-            description={project.description}
-            projectUrl={project.projectUrl}
-            githubUrl={project.githubUrl}
-            technologies={project.technologies}
-          />
+          <ProjectCard title={project.title} description={project.description} projectUrl={project.projectUrl} githubUrl={project.githubUrl} technologies={project.technologies} />
         ))
       }
     </section>
