--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,44 +1,35 @@
 ---
 import { Icon } from "astro-icon";
+import Logo from "/favicon.svg";
 ---
 
-<header class="pt-6 pb-4 md:pb-12 sticky !backdrop-blur-sm !bg-opacity-80 top-0 bg-white dark:bg-[#101218] transition-colors">
-  <nav>
-    <div class="navbar w-0 h-screen fixed overflow-y-hidden !z-30 dark:bg-[#101218] bg-white md:hidden duration-200">
-      <button class="close inline-block md:hidden !pt-0 transition ml-5" aria-label="close navigation button">
-        <Icon
-          name="akar-icons:arrow-left"
-          class="w-[26px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 close"
-        />
-      </button>
-      <div class="relative w-full grid place-items-center top-[20%] text-black bg-white dark:text-white dark:bg-[#101218]">
-        <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/">Home</a>
-        <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/about">About</a>
-        <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/projects">Projects</a>
-        <a class="p-3 text-4xl hover:text-blue-600 hover:dark:text-blue-400 transition" href="/blog">Blog</a>
+<header class="bg-white dark:bg-[#101218] text-lg dark:text-slate-300 transition-colors">
+  <a href="/" class="absolute m-6" aria-label="Website Logo"><img src={Logo} alt="Website Logo" class="w-10 h-10" /></a>
+  <nav class="p-8">
+    <div class="flex justify-end items-center space-x-2 m-0">
+      <div class="flex flex-row space-x-4">
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/about">About</a>
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/projects">Projects</a>
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/blog">Blog</a>
+      </div>
+      <div class="flex flex-row space-x-4">
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/about" aria-label="person outline">
+          <Icon name="eva:person-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors" />
+        </a>
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/projects" aria-label="stacked outline">
+          <Icon name="eva:copy-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors" />
+        </a>
+        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/blog" aria-label="clipboard outline">
+          <Icon name="eva:clipboard-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors" />
+        </a>
+        <a href="https://github.com/lancerossdev/lanceross.xyz" target="_blank" rel="noopener nofollow" aria-label="github logo outline">
+          <Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors" />
+        </a>
+        <button class="theme-toggle" aria-label="theme toggle">
+          <Icon name="eva:moon-outline" class="w-6 dark-btn hover:text-slate-500 dark:hover:text-slate-400 transition-colors dark:hidden" />
+          <Icon name="akar-icons:sun" class="w-6 light-btn dark:text-white hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden dark:block" />
+        </button>
       </div>
     </div>
-    <button class="open inline-block ml-5 md:hidden transition" aria-label="open navigation button"
-      ><Icon name="akar-icons:more-horizontal-fill" class="w-[28px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
-    </button>
-    <a
-      href="/"
-      class="text-transparent bg-clip-text bg-gradient-to-r from-[#4873f5] to-[#2bcc69] animate-rainbow absolute pr-4 font-bold text-[22px] left-12 ml-2 pt-0 pr-0 md:left-14 md:ml-1 md:pt-1"
-      >lanceross</a
-    >
-    <div class="absolute pl-5 text-xl left-44 pt-1 hidden md:block text-black dark:text-white">
-      <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/about">About</a>
-      <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/projects">Projects</a>
-      <a class="px-2 hover:text-blue-600 hover:dark:text-blue-400 transition" href="/blog">Blog</a>
-    </div>
-    <span>
-      <a class="absolute pointer right-16 md:right-20" href="https://github.com/lancerossdev/lanceross.xyz" target="_blank" rel="noopener nofollow" aria-label="github button">
-        <Icon name="akar-icons:github-fill" class="w-[26px] dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
-      </a>
-      <button class="theme-toggle absolute pointer right-[28px] md:right-10" aria-label="theme toggle">
-        <Icon name="akar-icons:moon" class="w-[26px] dark-btn hover:text-slate-500 dark:hover:text-slate-400 transition hover:scale-110 dark:hidden" />
-        <Icon name="akar-icons:sun" class="w-[26px] light-btn dark:text-white hover:text-slate-500 dark:hover:text-slate-400 transition hover:scale-110 hidden dark:block" />
-      </button>
-    </span>
   </nav>
 </header>
