--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -15,15 +15,15 @@ const { title, description, technologies, githubUrl, projectUrl } = Astro.props;
 <div class="text-lg p-6 my-2 flex flex-col gap-2 dark:bg-[#13151b] text-black dark:text-zinc-400 bg-[#efefef] rounded-xl shadow-xl transition-colors">
   <header class="flex justify-between items-center">
     <h2 class="text-xl font-medium dark:text-white">
-      {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="link of the project" class="ml-2"
+      {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="external link button" class="ml-2"
         ><Icon
-          name="akar-icons:arrow-up-right"
-          class="w-6 inline-block dark:text-white dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-[115%] transition-all"
+          name="eva:external-link-outline"
+          class="w-5 inline-block dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all"
         />
       </a>
     </h2>
-    <a href={githubUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="github repo of the website"
-      ><Icon name="akar-icons:github-fill" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+    <a href={githubUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="github button"
+      ><Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
     </a>
   </header>
   {
