--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Header from "@components/Header.astro";
-import "@fontsource/lexend-deca";
+import "@fontsource/inter";
 
 export interface Props {
   title?: string;
@@ -48,19 +48,6 @@ const canonicalURL = new URL(Astro.url).href;
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="follow, index" />
     <meta name="author" content="Lance Ross" />
-    <script>
-      const open = document.querySelector(".open");
-      const close = document.querySelector(".close");
-      open.addEventListener("click", function () {
-        document.querySelector(".navbar").classList.replace("w-0", "w-screen");
-        document.querySelector("body").classList.replace("overflow-auto", "overflow-y-hidden");
-      });
-
-      close.addEventListener("click", function () {
-        document.querySelector(".navbar").classList.replace("w-screen", "w-0");
-        document.querySelector("body").classList.replace("overflow-y-hidden", "overflow-auto");
-      });
-    </script>
     <script is:inline>
       // credits to satnaing on github
       const primaryColorScheme = "none";
@@ -94,14 +81,10 @@ const canonicalURL = new URL(Astro.url).href;
       });
     </script>
   </head>
-  <body class="transition scrollbar-thin scrollbar-thumb-zinc-400 scrollbar-track-zinc-300 dark:scrollbar-thumb-[#454b5f] dark:scrollbar-track-[#1d1f2a] dark:bg-[#101218] dark:text-white font-lexend-deca selection:bg-[#3d94ff42] min-h-screen flex flex-col text-xl overflow-auto">
+  <body class="transition scrollbar-thin scrollbar-thumb-zinc-400 scrollbar-track-zinc-300 dark:scrollbar-thumb-[#454b5f] dark:scrollbar-track-[#1d1f2a] dark:bg-[#101218] dark:text-white font-inter selection:bg-[#3d94ff42] text-xl">
     <Header />
-    <main class="m-auto p-6 max-w-4xl md:p-10 md:px-20">
+    <main class="m-auto p-6 max-w-4xl md:p-8">
       <slot />
     </main>
-    <footer class="grid place-items-center py-7 bg-[#181a23] text-white text-base">
-      <p>Designed and built by Lance Ross</p>
-      <p>Built using Astro and Tailwind CSS</p>
-    </footer>
   </body>
 </html>
