--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,22 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Icon from "astro-icon";
-import Lance from "/static/lanceross-image.webp";
+import { Picture } from "@astrojs/image/components";
+import Lance from "@images/lanceross.jpg";
 ---
 
 <Layout>
-  <section>
-    <div class="inline-block space-evenly py-8 md:flex">
-      <img class="inline-block rounded-full md:m-12 md:mt-14 mt-8 w-[172px] h-[172px]" src={Lance} alt="A Picture of Lance Ross with a Face Mask" />
-      <section class="ml-1">
-        <h1 class="text-4xl font-semibold my-7">Lance Ross</h1>
-        <p class="phrase max-w-10 my-5"></p>
-        <p class="max-w-10 dark:text-zinc-300">
-          Welcome to my home on the internet. I'm an aspiring web developer in the Philippines building different projects for fun with web technologies I'm currently learning.
-        </p>
-      </section>
+  <section class="my-8 sm:mb-14 sm:flex sm:items-center sm:justify-evenly">
+    <div class="rounded-full overflow-hidden inline-flex sm:m-8">
+      <Picture src={Lance} alt="Image of the author" aspectRatio="1:1" widths={[160, 320, 480]} loading="eager" sizes="160px" width={160} height={160} />
     </div>
+    <header class="mt-8 max-w-lg sm:my-0">
+      <h1 class="mb-4 text-3xl font-bold tracking-tight text-white">Lance Ross</h1>
+      <h2 class="mb-4 text-zinc-300">Student Web Developer 👨‍💻</h2>
+      <p class="max-w-10 font-normal leading-7 text-zinc-400 sm:max-w-sm md:max-w-xl">
+        Welcome to my home on the internet. I'm an aspiring web developer in the Philippines building different projects for fun with web technologies I'm currently learning.
+      </p>
+    </header>
   </section>
   <section>
     <div class="py-14 grid place-items-center text-center">
@@ -23,6 +24,9 @@ import Lance from "/static/lanceross-image.webp";
       <p class="max-w-10 dark:text-zinc-300">
         Hey there! I'm Lance Ross. I am an aspiring Web developer in the Philippines. You probably saw me on Twitter tweeting about 100 Days of Code, or maybe you just saw me randomly on the
         internet.
+      </p>
+      <p class="max-w-10 dark:text-zinc-300">
+        Interested with projects I'm working on? You can go to my projects page. I also have a 
       </p>
     </div>
   </section>
@@ -38,25 +42,18 @@ import Lance from "/static/lanceross-image.webp";
       </p>
       <div class="mt-8 flex space-evenly items-center">
         <a class="mx-4" href="https://twitter.com/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="Twitter Logo"
-          ><Icon name="akar-icons:twitter-fill" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+          ><Icon name="eva:twitter-outline" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
         </a>
         <a class="mx-4" href="https://github.com/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="GitHub Logo">
-          <Icon name="akar-icons:github-fill" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+          <Icon name="eva:github-outline" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
         </a>
-        <a class="mx-4" href="https://dev.to/lanceross" target="_blank" rel="noopener nofollow noreferrer" aria-label="Dev Community Logo">
-          <Icon name="fa-brands:dev" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+        <a class="mx-4" href="mailto:lancerossdev@duck.com" target="_blank" rel="noopener nofollow noreferrer" aria-label="Dev Community Logo">
+          <Icon name="eva:email-outline" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
         </a>
         <a class="mx-4" href="https://codepen.io/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="CodePen Logo">
-          <Icon name="akar-icons:codepen-fill" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+          <Icon name="akar-icons:codepen-fill" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
         </a>
       </div>
     </div>
   </section>
-  <script defer>
-    const phrases = ["Student Web Developer 👨‍💻", "Tailwind CSS Lover 💨", "Big fan of Astro SSG 🚀", "Filipino Web Developer 😎"];
-
-    window.addEventListener(`load`, () => {
-      document.querySelector(".phrase").innerHTML = phrases[Math.floor(Math.random() * phrases.length)];
-    });
-  </script>
 </Layout>
