final changes for revamp

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ import Logo from "/favicon.svg";
   <nav class="p-8">
     <div class="flex justify-end items-center space-x-2 m-0">
       <div class="flex flex-row space-x-4">
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/about">About</a>
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/projects">Projects</a>
-        <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/blog">Blog</a>
+        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/about">About</a>
+        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/projects">Projects</a>
+        <a class="dark:text-zinc-300 text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden sm:block" href="/blog">Blog</a>
       </div>
       <div class="flex flex-row space-x-4">
         <a class="hover:text-slate-500 dark:hover:text-slate-400 transition-colors block sm:hidden" href="/about" aria-label="person outline">
