--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,14 +7,14 @@ import { technologies } from "@content/technologies";
 <Layout title="About - Lance Ross" description="I'm Lance Ross, a web dev from Philippines. You can find more about me on this page.">
   <section>
     <div class="mb-12 dark:text-zinc-300">
-      <h1 class="text-4xl mb-6 dark:text-white">About Me 👨‍💻</h1>
-      <p>I'm Lance Ross, an Frontend Web developer from the Philippines. I enjoy building small projects using Astro and Tailwind CSS.</p><br />
+      <h1 class="text-4xl mb-6 dark:text-white">About Me</h1>
+      <p>I'm Lance Ross, a Frontend Web Developer from the Philippines. I enjoy building small projects using Astro and Tailwind CSS.</p><br />
       <p>I create basic webpages when I have free time after school. When not busy with doing projects and schoolworks, I really love to do exercise every night to stay fit!</p>
     </div>
   </section>
   <section>
     <div class="mb-12 dark:text-zinc-300">
-      <h1 class="text-4xl my-6 dark:text-white">Tech Stack ⚡</h1>
+      <h1 class="text-4xl my-6 dark:text-white">Tech Stack</h1>
       <p>I love exploring new libraries and frameworks. Here is a short list of technologies that I learn and use with my side projects.</p>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 my-5">
         {technologies.map((tech) => <Technologies logo={tech.logo} text={tech.text} />)}
