--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -94,7 +94,7 @@ pubDate = pubDate.split("T")[0];
         </article>
       </section>
       <footer class="flex flex-row justify-between items-center">
-        <a href="/blog" class="dark:text-blue-400 text-blue-600"><code>cd ..</code></a>
+        <a href="/blog" class="dark:text-slate-400 text-lg text-slate-700">Back to posts</a>
       </footer>
     </main>
   </body>
