--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import { blogs } from "@content/blogs";
 
 <Layout title="Blog - Lance Ross" description="This is where you can find my all my posts about web development.">
   <section>
-    <h1 class="text-4xl mb-6 dark:text-white">My Blog 📝</h1>
+    <h1 class="text-4xl mb-6 dark:text-white">My Blog</h1>
     <p class="dark:text-zinc-300">
       This is where I write about my experiences as a web developer, and share my thoughts in web development field. I also write about my personal life here.
     </p><br />
