--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import { projects } from "@content/projects";
 
 <Layout title="Projects - Lance Ross" description="Here are all my small projects from my GitHub.">
   <section>
-    <h1 class="text-4xl mb-6 dark:text-white">My Projects 📚</h1>
+    <h1 class="text-4xl mb-6 dark:text-white">My Projects</h1>
     <p class="dark:text-zinc-300 mb-5">
       These are all projects that I own and contribute to during my free time. Each project have a link on their repositories and a demo link so you can visit the project on your browser if I deployed it to the internet.
     </p>
