added og generator

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,8 +26,8 @@ import Logo from "/favicon.svg";
           <Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors" />
         </a>
         <button class="theme-toggle" aria-label="theme toggle">
-          <Icon name="eva:moon-outline" class="w-6 dark-btn hover:text-slate-500 dark:hover:text-slate-400 transition-colors dark:hidden" />
-          <Icon name="akar-icons:sun" class="w-6 light-btn dark:text-white hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden dark:block" />
+          <Icon name="eva:moon-outline" class="w-6 hover:text-slate-500 dark:hover:text-slate-400 transition-colors dark:hidden" />
+          <Icon name="akar-icons:sun" class="w-6 dark:text-white hover:text-slate-500 dark:hover:text-slate-400 transition-colors hidden dark:block" />
         </button>
       </div>
     </div>
