--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -18,12 +18,12 @@ const { title, description, technologies, githubUrl, projectUrl } = Astro.props;
       {title}<a href={projectUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="external link button" class="ml-2"
         ><Icon
           name="eva:external-link-outline"
-          class="w-5 inline-block dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all"
+          class="w-5 inline-block dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-all"
         />
       </a>
     </h2>
     <a href={githubUrl} target="_blank" rel="noopener nofollow noreferrer" aria-label="github button"
-      ><Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 hover:scale-110 transition-all" />
+      ><Icon name="eva:github-outline" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-all" />
     </a>
   </header>
   {
