--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -88,13 +88,13 @@ pubDate = pubDate.split("T")[0];
         </nav>
         
       </header>
-      <section class="dark:text-slate-200 prose-a:dark:text-slate-400 prose-a:text-slate-500 prose-xl !text-[1.18rem] prose-img:rounded-xl">
+      <section class="dark:text-slate-200 prose-a:dark:text-slate-400 hover:prose-a:underline prose-a:text-slate-500 prose-xl !text-[1.18rem] prose-img:rounded-xl">
         <article>
           <slot />
         </article>
       </section>
-      <footer class="flex flex-row justify-between items-center">
-        <a href="/blog" class="dark:text-slate-400 text-lg text-slate-700">Back to posts</a>
+      <footer class="flex flex-row justify-between items-center mt-10">
+        <a href="/blog" class="hover:underline dark:text-slate-400 text-slate-500">Back to posts</a>
       </footer>
     </main>
   </body>
