--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ export interface Props {
 const defaultMeta = {
   title: "Lance Ross",
   description: "I'm a student web dev and a JAMStack enjoyer.",
-  image: "/assets/default-og-image.png",
+  image: "/banner.png",
   imageAlt: "A Picture of Lance Ross with a Face Mask",
 };
 
