--- a/src/components/BlogImage.astro
+++ b/src/components/BlogImage.astro
@@ -10,7 +10,7 @@ const { src, alt, aspectRatio = 16 / 9, loading = "lazy" } = Astro.props;
 ---
 
 <Picture
-  widths={[600, 800, 1200, 1600]}
+  widths={[800]}
   sizes="(max-width: 800px) 90vw, 768px"
   aspectRatio={aspectRatio}
   src={src}
