--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -88,7 +88,7 @@ pubDate = pubDate.split("T")[0];
         </nav>
         
       </header>
-      <section class="dark:text-slate-200 prose-a:dark:text-slate-400 hover:prose-a:underline prose-a:text-slate-500 prose-xl !text-[1.18rem] prose-img:rounded-xl">
+      <section class="dark:text-slate-200 prose-a:dark:text-slate-400 hover:prose-a:underline prose-a:text-slate-500 prose-xl !text-[1.18rem]">
         <article>
           <slot />
         </article>
