--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Socials from "@components/Socials.astro";
 <Layout>
   <section class="my-8 sm:mb-14 sm:flex sm:items-center sm:justify-evenly">
     <div class="rounded-full overflow-hidden inline-flex sm:m-8">
-      <Picture src={Lance} alt="Image of the author" aspectRatio="1:1" widths={[160]} loading="eager" sizes="160px" width={160} height={160} />
+      <Picture src={Lance} alt="Image of the author" aspectRatio="1:1" widths={[320]} loading="eager" sizes="160px" width={160} height={160} />
     </div>
     <header class="mt-8 max-w-lg sm:my-0">
       <h1 class="mb-4 text-3xl font-bold tracking-tight dark:text-white">Lance Ross</h1>
@@ -24,7 +24,7 @@ import Socials from "@components/Socials.astro";
       <p class="max-w-2xl dark:text-zinc-300">
         Hey there! I'm Lance Ross. I am an aspiring Web developer in the Philippines. You probably saw me on Twitter or Discord chatting around with web development related servers.
       </p>
-      <p class="mt-5 max-w-xl dark:text-zinc-300">Interested with projects I'm working on? You can find all my <a href="/projects" class="hover:underline dark:text-slate-400 text-slate-700">projects</a> there. I also have a <a href="/blog" class="hover:underline dark:text-slate-400 text-slate-700">blog</a> where I write stories about web development</p>
+      <p class="mt-5 max-w-xl dark:text-zinc-300">Interested with projects I'm working on? You can find all my <a href="/projects" class="hover:underline font-medium dark:text-slate-400 text-slate-700">projects</a> there. I also have a <a href="/blog" class="hover:underline dark:text-slate-400 text-slate-700">blog</a> where I write stories about web development</p>
     </div>
   </section>
   <section>
