--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,9 +5,9 @@ import { Icon } from "astro-icon";
 
 <Layout>
   <section class="grid place-items-center text-center overflow-hidden relative mt-9">
-    <Icon name="twemoji:loudly-crying-face" class="w-36 h-36" />
-    <h1 class="my-8 text-5xl text-transparent bg-clip-text bg-gradient-to-r from-[#355acb] to-[#2bcc69] animate-rainbow font-semibold">404 Error</h1>
+    <Icon name="mdi:robot-dead" class="w-36 h-36" />
+    <h1 class="my-8 text-5xl font-semibold">404 Error</h1>
     <h2 class="text-2xl dark:text-zinc-300">Sorry, it doesn't exist.</h2><br />
-    <a href="/"><button class="dark:bg-[#161923] bg-zinc-200 hover:bg-zinc-300 hover:dark:bg-[#1e212e] transition-colors rounded-xl p-3">Go back to homepage</button></a>
+    <a href="/"><button class="dark:bg-[#161923] bg-zinc-200 hover:bg-zinc-300 hover:dark:bg-[#1e212e] transition-colors rounded-xl p-3 text-black dark:text-white">Go back to homepage</button></a>
   </section>
 </Layout>
