--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,6 +8,6 @@ import { Icon } from "astro-icon";
     <Icon name="mdi:robot-dead" class="w-36 h-36" />
     <h1 class="my-8 text-5xl font-semibold">404 Error</h1>
     <h2 class="text-2xl dark:text-zinc-300">Sorry, it doesn't exist.</h2><br />
-    <a href="/"><button class="dark:bg-[#161923] bg-zinc-200 hover:bg-zinc-300 hover:dark:bg-[#1e212e] transition-colors rounded-xl p-3 text-black dark:text-white">Go back to homepage</button></a>
+    <a href="/"><button class="dark:bg-[#161923] bg-zinc-200 hover:bg-zinc-300 hover:dark:bg-[#1e212e] transition-colors motion-reduce:transition-none rounded-xl p-3 text-black dark:text-white">Go back to homepage</button></a>
   </section>
 </Layout>
