--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -10,7 +10,7 @@ const { text, logo } = Astro.props as Props;
 ---
 
 <div class="flex items-center p-4">
-  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-[#171a21] bg-zinc-200 border-t border-slate-400 text-zinc-800 dark:text-white dark:border-slate-700 transition">
+  <span class="flex justify-center items-center w-11 h-11 mr-3 rounded-full dark:bg-[#171a21] bg-zinc-200 border-t border-slate-400 text-zinc-800 dark:text-white dark:border-slate-700 transition-colors motion-reduce:transition-none">
     <Icon name={logo} class="w-6" />
   </span>
   <p>{text}</p>
