I forgot it on blog layout
whyyy

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -77,7 +77,7 @@ const ogImageParams = new URLSearchParams({
     </script>
   </head>
   <body
-    class="transition scrollbar-thin scrollbar-thumb-slate-400 scrollbar-track-slate-300 dark:scrollbar-thumb-[#454b5f] dark:scrollbar-track-[#1d1f2a] dark:bg-[#101218] dark:text-white font-inter selection:bg-[#3d94ff42] min-h-screen flex flex-col sm:text-xl overflow-auto"
+    class="transition motion-reduce:transition-none scrollbar-thin scrollbar-thumb-slate-400 scrollbar-track-slate-300 dark:scrollbar-thumb-[#454b5f] dark:scrollbar-track-[#1d1f2a] dark:bg-[#101218] dark:text-white font-inter selection:bg-[#3d94ff42] min-h-screen flex flex-col sm:text-xl overflow-auto"
   >
     <Header />
     <main class="m-auto p-6 max-w-4xl md:p-10 md:px-20">
