removed mastodon and stuffs

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -18,8 +18,8 @@ import { Icon } from "astro-icon";
     <a class="mx-4" href="https://codepen.io/lancerossdev" target="_blank" rel="noopener nofollow noreferrer" aria-label="CodePen Logo">
       <Icon name="akar-icons:codepen-fill" class="w-6 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none my-3" />
     </a>
-    <a class="mx-4" href="https://mas.to/@lancerossdev" target="_blank" rel="me noopener nofollow noreferrer" aria-label="Mastodon Logo">
-      <Icon name="ri:mastodon-line" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none my-3" />
+    <a class="mx-4" href="https://g.dev/lanceross" target="_blank" rel="me noopener nofollow noreferrer" aria-label="Mastodon Logo">
+      <Icon name="ph:google-logo-bold" class="w-7 dark:text-white text-black hover:text-slate-500 dark:hover:text-slate-400 transition-colors motion-reduce:transition-none my-3" />
     </a>
   </div>
 </div>
