--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -23,6 +23,7 @@ const ogImageParams = new URLSearchParams({
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{frontmatter.title}</title>
+    <link rel="sitemap" href="/sitemap-index.xml">
     <link rel="canonical" href={canonicalURL} />
     <meta name="title" content={frontmatter.title} />
     <meta name="description" content={frontmatter.description} />
